--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "emoji-picker-element": "^1.16.0",
     "mysql": "^2.18.1",
     "node-sass": "^8.0.0",
     "webpack-merge": "^5.8.0"
