--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "emoji-picker-element": "^1.16.0",
     "insert-text-at-cursor": "^0.3.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "node-sass": "^8.0.0",
     "webpack-merge": "^5.8.0"
   },
