--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-js": "^4.37.0",
+    "@clerk/clerk-sdk-node": "^4.8.2",
     "emoji-picker-element": "^1.16.0",
     "insert-text-at-cursor": "^0.3.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
     "node-sass": "^8.0.0",
